[package]
name = "rvindecoder"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "debuginfo"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.7.5", features = ["tracing"]}
bb8 = "0.8.3"
bb8-tiberius = "0.15.0"

convert_case = "0.6.0"
dotenv = "0.15.0"
tiberius = "0.12.2"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
